--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,17 @@
 <html>
   <head>
     <title><%= full_title(yield(:title)) %></title>
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag 'application', media: 'all',
+                                           'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
+    <%= render partial: 'layouts/shim' %>
   </head>
   <body>
-
-    <%= yield %>
-
+    <%= render partial: 'layouts/header' %>
+    <div class="container">
+      <%= yield %>
+      <%= render partial: 'layouts/footer' %>
+    </div>
   </body>
 </html>
