--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,4 +8,22 @@
       </h1>
     </section>
   </aside>
+  <div class="col-md-8">
+    <% if @user.microposts.any? %>
+      <h3>Microposts (<%= @user.microposts.count %>)</h3>
+      <ol class="microposts">
+        <% @microposts.each do |micropost| %>
+          <li id="micropost-<%= micropost.id %>">
+          <%= link_to gravatar_for(micropost.user, size: 50), micropost.user %>
+            <span class="user"><%= link_to micropost.user.name, micropost.user %></span>
+            <span class="content"><%= micropost.content %></span>
+            <span class="timestamp">
+              Posted <%= time_ago_in_words(micropost.created_at) %> ago.
+            </span>
+          </li>
+        <% end %>
+      </ol>
+      <%= will_paginate @microposts %>
+    <% end %>
+  </div>
 </div>
