--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,27 +1,22 @@
 <% provide(:title, @user.name) %>
 <div class="row">
   <aside class="col-md-4">
-    <section class="user_info">
+    <section>
       <h1>
         <%= gravatar_for @user %>
         <%= @user.name %>
       </h1>
     </section>
+    <section class="stats">
+      <%= render 'shared/stats' %>
+    </section>
   </aside>
   <div class="col-md-8">
+    <%= render 'follow_form' if logged_in? %>
     <% if @user.microposts.any? %>
       <h3>Microposts (<%= @user.microposts.count %>)</h3>
       <ol class="microposts">
-        <% @microposts.each do |micropost| %>
-          <li id="micropost-<%= micropost.id %>">
-          <%= link_to gravatar_for(micropost.user, size: 50), micropost.user %>
-            <span class="user"><%= link_to micropost.user.name, micropost.user %></span>
-            <span class="content"><%= micropost.content %></span>
-            <span class="timestamp">
-              Posted <%= time_ago_in_words(micropost.created_at) %> ago.
-            </span>
-          </li>
-        <% end %>
+        <%= render @microposts %>
       </ol>
       <%= will_paginate @microposts %>
     <% end %>
